# axum-mongo-api

./: CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  docker-compose.yaml  justfile
src/: config.rs  handlers.rs  main.rs  models.rs
