[package]
name = "axum-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
futures = "0.3.31"
mongodb = "3.2.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
